# * take out vendors/offerings stuff
# * take out ez where
# * remote_form_for is gone (use dynamic_form gem/prototype legacy helper)
# * finding transparently by login is broken (fixed using friendly_id)
# * can't dup nilclass error in Rails timezone conversion (fixed with a little patch, should get fixed in a new version of Rails)
# * tinymce isn't working
# * fix responds-to-parent

* mce_opts initializer
* replace old multiple uploader
* fix photo uploading from welcome_photo page
* add back searching to users index
* remove all the theming stuff
* replace white_list with something (sanitize?) (preserve stuff from white list initializer)
* replace setup template with something else more sensible
* allow overriding initializers, autoloading assets, etc
* fix rakismet initializer
* remove stylesheet customization
* use aato instead of aatos
* authlogic has problems: not sure it's recording last_login magic columns, investigate
* Bug in rails fixtures.rb on 849 - use fixtures_path.to_s.size instead
* swap jquery for prototype
* photo cropping is not working
* configure configatron from ruby, not yaml
* fix commentable routing (path prefix)

=2.0.0.pre
* Rails 3.1.0.beta1 compatibility

=1.9.9

* Rails 3.1 compatibility
* Ruby 1.9.2 compatibility
* Use Paperclip instead of attachment_fu
* Add Omniauth
* Remove lots of old, unused featured (contests, skills, offerings, etc.)

=1.2.1
* Anonymous forum replies
* Turn comment notifications on or off by post
* Allow admins/mods to edit comments (they can already delete them)
* Fix security vulnerability in AuthenticatedSystem

=1.2.0
* Threaded private messages
* Clear cache link in admin dashboard
* Add support for using rakismet gem to check comments for spam (see README for instructions)

=1.1.0
* fixed time_ago formatting problem on user/index
* user Authlogic's perishable token for doing password resets (instead of sending them a password)


= 1.0.4.2
* Rails 2.3.4 compatibility (all tests pass, Takk)