@@ -79,7 +79,7 @@
     #edit
     - if @topic.locked?
       %p
-        = image_tag "clearbits/lock.gif", :class => "icon grey", :title => :topic_locked.l, :plugin => "community_engine"
+        = image_tag "clearbits/lock.gif", :class => "icon grey", :title => :topic_locked.l
         %label= :this_topic_is_locked.l
     - else
       %h6.all.right= link_to_function :reply_to_topic.l, "ReplyForm.init()", :class => "utility"
